Add copyright notice.

--- a/themes/chronicles/layouts/partials/sidebar.html
+++ b/themes/chronicles/layouts/partials/sidebar.html
@@ -159,10 +159,14 @@
                 {{ end }}
             </ul>
 
-            <p class="copyright">&copy; {{ .Site.Title }}. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>. Ported by <a href="//github.com/jpescador" target="_blank">Julio Pescador</a>. Powered by <a href="//gohugo.io" target="_blank">Hugo</a>
-            <br>
-            Hosting provided by <a href="https://www.digitalocean.com/" target="_blank" rel="noopener">DigitalOcean</a>
-      </p>
+            <p class="copyright">
+                &copy; {{ .Site.Title }}. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>. Ported by <a href="//github.com/jpescador" target="_blank">Julio Pescador</a>. Powered by <a href="//gohugo.io" target="_blank">Hugo</a>
+                <br>
+                Hosting provided by <a href="https://www.digitalocean.com/" target="_blank" rel="noopener">DigitalOcean</a>
+            </p>
+            <p class="copyright">
+                VCMI, this page and the VCMI Team are in no way associated with or supported by Ubisoft Entertainment. Heroes, Might and Magic, Heroes of Might and Magic and their respective logos are registered trademarks of Ubisoft Entertainment in the U.S. and/or other countries. All Rights Reserved. All other trademarks are properties of their respective owners.
+            </p>
         </section>
 
 </section>
