--- a/themes/chronicles/static/css/main.css
+++ b/themes/chronicles/static/css/main.css
@@ -1409,7 +1409,7 @@
 
 	body {
 		background-color: #000;
-		background-image: url(/img/main/border_background.jpg);
+		background-image: url(/img/background_border.jpg);
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -1710,7 +1710,7 @@
 		-ms-transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		transition: background-color 0.2s ease, box-shadow 0.2s ease, color 0.2s ease;
 		background-color: #620300;
-		background-image: url(/img/main/cellpic1.jpg);
+		background-image: url(/img/background_red.jpg);
 		border: 0;
 		box-shadow: inset 0 0 0 1px rgba(160, 160, 160, 0.3);
 		color: #ffe081 !important;
@@ -2962,7 +2962,7 @@
 		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background-color: #620300;
-		background-image: url(/img/main/cellpic1.jpg);
+		background-image: url(/img/background_red.jpg);
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		height: 3.5em;
 		left: 0;
@@ -3158,7 +3158,7 @@
 
 	#wrapper {
 		background-color: #36281d;
-		background-image: url(/img/main/body_background.jpg);
+		background-image: url(/img/background_body.jpg);
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -3359,7 +3359,7 @@
 		transition: transform 0.5s ease, visibility 0.5s;
 		-webkit-overflow-scrolling: touch;
 		background-color: #620300;
-		background-image: url(/img/main/cellpic1.jpg);
+		background-image: url(/img/background_red.jpg);
 		border-left: solid 1px rgba(160, 160, 160, 0.3);
 		box-shadow: none;
 		height: 100%;
