--- a/themes/chronicles/static/css/main.css
+++ b/themes/chronicles/static/css/main.css
@@ -3185,6 +3185,10 @@
 	}
 
 		body.is-menu-visible #header {
+			-moz-transition: opacity 0.5s ease;
+			-webkit-transition: opacity 0.5s ease;
+			-ms-transition: opacity 0.5s ease;
+			transition: opacity 0.5s ease;
 			opacity: 0.15;
 		}
 
