sidebar: "Sponsors" -> "Hosting provided by"

--- a/themes/chronicles/layouts/partials/sidebar.html
+++ b/themes/chronicles/layouts/partials/sidebar.html
@@ -34,7 +34,7 @@
                 {{ end }}
             </ul>
 
-            <h3>Sponsors</h3>
+            <h3>Hosting provided by</h3>
             <a href="https://www.digitalocean.com/" target="_blank" rel="noopener" class="dologo">
                 <img src="/img/main/digitalocean_logo.png" title="Hosting provided by DigitalOcean" alt="Hosting provided by DigitalOcean">
             </a>
