Add default image for Open Graph

--- a/themes/chronicles/layouts/partials/header.html
+++ b/themes/chronicles/layouts/partials/header.html
@@ -34,6 +34,11 @@
 
         {{ template "_internal/twitter_cards.html" . }}
         {{ template "_internal/opengraph.html" . }}
+
+        {{ with .Site.Params.openGraphDefaultImage }}
+            <meta name="og:image" content="{{ . }}">
+        {{ end }}
+
         {{ template "_internal/schema.html" . }}
         {{ template "_internal/google_news.html" . }}
 
