--- a/themes/chronicles/layouts/partials/header.html
+++ b/themes/chronicles/layouts/partials/header.html
@@ -32,11 +32,14 @@
             {{ end }}
         {{ end }}
 
+        {{ with .Site.Params.openGraphDefaultImage }}
+            <meta name="twitter:image:src" content="{{ . }}">
+            <meta property="og:image" content="{{ . }}">
+        {{ end }}
         {{ template "_internal/twitter_cards.html" . }}
         {{ template "_internal/opengraph.html" . }}
 
         {{ with .Site.Params.openGraphDefaultImage }}
-            <meta name="og:image" content="{{ . }}">
         {{ end }}
 
         {{ template "_internal/schema.html" . }}
