--- a/themes/chronicles/layouts/partials/platformsAppstore.html
+++ b/themes/chronicles/layouts/partials/platformsAppstore.html
@@ -1,5 +1,5 @@
 <!-- Platform download links -->
-{{ range .Site.Menus.platforms }}
+{{ range .Site.Menus.platformsappstore }}
     <li>
         <a href="{{ .URL }}">
             <i class="{{ .Identifier }}"></i>
