--- a/themes/chronicles/layouts/partials/platformsMobile.html
+++ b/themes/chronicles/layouts/partials/platformsMobile.html
@@ -1,5 +1,5 @@
 <!-- Platform download links -->
-{{ range .Site.Menus.platforms }}
+{{ range .Site.Menus.platformsmobile }}
     <li>
         <a href="{{ .URL }}">
             <i class="{{ .Identifier }}"></i>
